--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
    "version": "0.1.0",
    "private": true,
    "dependencies": {
+      "@patternfly/patternfly": "^4.164.2",
       "@patternfly/react-core": "^4.181.1",
+      "@patternfly/react-table": "^4.50.1",
       "@testing-library/jest-dom": "^5.16.1",
       "@testing-library/react": "^12.1.2",
       "@testing-library/user-event": "^13.5.0",
